5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4125/executions/1758_1189.log
== TEST (2019-05-28 19:04:04) 
-- CODE:
from numpy import*
n = input("digite uma string: ")
nova = n.replace(" "," ")
inv = ""
i = -1
while(i>= -len(nova))
	inv = inv + new
	i = i -1
print(nova.upper())
if nova == new :
	print(1)
else: 
	print(0)
-- ERROR:
File "XXXX", line 6
    while(i>= -len(nova))
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 19:04:20) 
-- CODE:
from numpy import*
n = input("digite uma string: ")
nova = n.replace(" "," ")
inv = ""
i = -1
while(i>= -len(nova)):
	inv = inv + new
	i = i -1
print(nova.upper())
if nova == new :
	print(1)
else: 
	print(0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 19:04:42) 
-- CODE:
from numpy import*
n = input("digite uma string: ")
nova = n.replace(" "," ")
inv = ""
i = -1
while(i>= -len(nova)):
	inv = inv + new
	i = i -1
print(nova.upper())
if nova == inv :
	print(1)
else: 
	print(0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 19:04:53) 
-- CODE:
from numpy import*
n = input("digite uma string: ")
nova = n.replace(" "," ")
inv = ""
i = -1
while(i>= -len(nova)):
	inv = inv + nova
	i = i -1
print(nova.upper())
if nova == inv :
	print(1)
else: 
	print(0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 19:05:05) 
-- CODE:
from numpy import*
n = input("digite uma string: ")
nova = n.replace(" "," ")
inv = ""
i = -1
while(i>= -len(nova)):
	inv = inv + nova
	i = i -1
print(nova.upper())
if nova == inv :
	print(1)
else: 
	print(0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 19:05:35) 
-- CODE:
from numpy import*
n = input("digite uma string: ")
nova = n.replace(" "," ")
inv = ""
i = -1
while(i>= -len(nova)):
	inv = inv + nova[i]
	i = i -1
print(nova.upper())
if nova == inv :
	print(1)
else: 
	print(0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 19:05:44) 
-- CODE:
from numpy import*
n = input("digite uma string: ")
nova = n.replace(" "," ")
inv = ""
i = -1
while(i>= -len(nova)):
	inv = inv + nova[i]
	i = i -1
print(nova.upper())
if nova == inv :
	print(1)
else: 
	print(0)
-- EXECUTION TIME:
0.57721
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:
ACARARAJADADAJARARACA
1
-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:
CACHORRO
0
-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:
AMALANADANALAMA
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
